# Company_news

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  PRODUCTION_CHECKLIST.md  README.md  REQUIREMENTS.md  SOURCES_STATUS.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: daily-summary.yml  monitor.yml  smoke.yml  tests.yml
config/: companies.yaml  sources.yaml
data/: state.json
docs/: github-models-integration.md
src/dividend_monitor/: __init__.py  calculations.py  config.py  daily_summary.py  deduplication.py  dividends.py  financial_reports.py  github_models.py  health.py  models.py  runner.py  storage.py  summarizer.py  telegram.py
src/dividend_monitor/sources/: __init__.py  base.py  edisclosure.py  lenenergo.py  moex.py  moex_companies.py  official_news.py  parsing.py  sber.py
tests/: test_config.py  test_daily_summary.py  test_deduplication.py  test_dividends.py  test_financial_reports.py  test_github_models.py  test_health.py  test_runner.py  test_sources.py  test_storage.py  test_telegram.py
tests/fixtures/: edisclosure_reports.html  lenenergo_press.html  moex_companies_rss.xml  moex_investor_rss.xml  news.xml  official_news.html  sber_disclosure.html
