[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dividend-monitor"
version = "0.1.0"
description = "A serverless Telegram monitor for company publications."
requires-python = ">=3.12,<3.14"
dependencies = [
  "beautifulsoup4==4.15.0",
  "feedparser==6.0.12",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.21",
]

[project.scripts]
dividend-monitor = "dividend_monitor.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
